--- a/timer/css/style.css
+++ b/timer/css/style.css
@@ -4,7 +4,16 @@ body{
 }
 
 .time {
-    padding-top: 35vw;
-    padding-left: 20%;
     font-size: 4vw;
+    width: 100%;
+    height: 4vw;
+    background-color: green;
+    text-align: center;
+    vertical-align: center;
+}
+
+.time-block {
+    width: 100%;
+    height: 4vw;
+    margin-top: 30%;
 }
